@@ -36,6 +36,7 @@ Specifically, the GPL parts of FFmpeg are
     - vf_hue.c
     - vf_kerndeint.c
     - vf_mp.c
+    - vf_noise.c
     - vf_pp.c
     - vf_smartblur.c
     - vf_super2xsai.c
