@@ -18,6 +18,7 @@ version <next>:
 - il filter ported from libmpcodecs
 - support ID3v2 tags in ASF files
 - RF64 support in WAV muxer
+- noise filter ported from libmpcodecs
 
 
 version 1.1:
